docs/generated/2.0-b2/Piwik/Plugin/ViewDataTable.md
<small>Piwik\Plugin</small>

ViewDataTable
=============

This class is used to load (from the API) and customize the output of a given DataTable.

Description
-----------

You can build your own ViewDataTable by extending this class and implementing the buildView() method which defines
which data should be loaded and which view should be rendered.

Example usage:
In the Controller of the plugin VisitorInterest
<pre>
   function getNumberOfVisitsPerVisitDuration( $fetch = false)
 {
       $view = ViewDataTable::factory( 'cloud' );
       $view->init( $this->pluginName,  __FUNCTION__, 'VisitorInterest.getNumberOfVisitsPerVisitDuration' );
       $view->setColumnsToDisplay( array('label','nb_visits') );
       $view->disableSort();
       $view->disableExcludeLowPopulation();
       $view->disableOffsetInformation();

       return $this->renderView($view, $fetch);
   }
</pre>


Constants
---------

This abstract class defines the following constants:

- [`ID`](#ID)

Properties
----------

This abstract class defines the following properties:

- [`$config`](#$config)
- [`$requestConfig`](#$requestConfig)

<a name="config" id="config"></a>
### `$config`

#### Signature

- It is a **public** property.
- It is a(n) `Piwik\ViewDataTable\Config` value.

<a name="requestconfig" id="requestconfig"></a>
### `$requestConfig`

#### Signature

- It is a **public** property.
- It is a(n) `Piwik\ViewDataTable\RequestConfig` value.

Methods
-------

The abstract class defines the following methods:

- [`__construct()`](#__construct) &mdash; Constructor.
- [`getDefaultConfig()`](#getDefaultConfig) &mdash; Returns the default config.
- [`getDefaultRequestConfig()`](#getDefaultRequestConfig) &mdash; Returns the default request config.
- [`getViewDataTableId()`](#getViewDataTableId) &mdash; Returns the viewDataTable ID for this DataTable visualization.
- [`isViewDataTableId()`](#isViewDataTableId) &mdash; Detects whether the viewDataTable or one of its ancestors has the given id.
- [`getDataTable()`](#getDataTable) &mdash; Returns the DataTable loaded from the API
- [`setDataTable()`](#setDataTable) &mdash; To prevent calling an API multiple times, the DataTable can be set directly.
- [`render()`](#render) &mdash; Requests all needed data and renders the view.
- [`isRequestingSingleDataTable()`](#isRequestingSingleDataTable) &mdash; Determine if the view data table requests a single data table or not.
- [`canDisplayViewDataTable()`](#canDisplayViewDataTable) &mdash; Here you can define whether your visualization can display a specific data table or not.

<a name="__construct" id="__construct"></a>
### `__construct()`

Constructor.

#### Description

Initializes the default config, requestConfig and the request itself. After configuring some
mandatory properties reports can modify the view by listening to the hook 'ViewDataTable.configure'.

#### Signature

- It is a **public** method.
- It accepts the following parameter(s):
    - `$controllerAction`
    - `$apiMethodToRequestDataTable`
- It does not return anything.

<a name="getdefaultconfig" id="getdefaultconfig"></a>
### `getDefaultConfig()`

Returns the default config.

#### Description

Custom viewDataTables can change the default config to their needs by either
modifying this config or creating an own Config class that extends the default Config.

#### Signature

- It is a **public static** method.
- It returns a(n) `Piwik\ViewDataTable\Config` value.

<a name="getdefaultrequestconfig" id="getdefaultrequestconfig"></a>
### `getDefaultRequestConfig()`

Returns the default request config.

#### Description

Custom viewDataTables can change the default config to their needs by either
modifying this config or creating an own RequestConfig class that extends the default RequestConfig.

#### Signature

- It is a **public static** method.
- It returns a(n) `Piwik\ViewDataTable\RequestConfig` value.

<a name="getviewdatatableid" id="getviewdatatableid"></a>
### `getViewDataTableId()`

Returns the viewDataTable ID for this DataTable visualization.

#### Description

Derived classes  should declare a const ID field
with the viewDataTable ID.

#### Signature

- It is a **public static** method.
- It returns a(n) `string` value.
- It throws one of the following exceptions:
    - [`Exception`](http://php.net/class.Exception)

<a name="isviewdatatableid" id="isviewdatatableid"></a>
### `isViewDataTableId()`

Detects whether the viewDataTable or one of its ancestors has the given id.

#### Signature

- It is a **public** method.
- It accepts the following parameter(s):
    - `$viewDataTableId`
- It returns a(n) `bool` value.

<a name="getdatatable" id="getdatatable"></a>
### `getDataTable()`

Returns the DataTable loaded from the API

#### Signature

- It is a **public** method.
- It returns a(n) [`DataTable`](../../Piwik/DataTable.md) value.
- It throws one of the following exceptions:
    - [`Exception`](http://php.net/class.Exception) &mdash; if not yet defined

<a name="setdatatable" id="setdatatable"></a>
### `setDataTable()`

To prevent calling an API multiple times, the DataTable can be set directly.

#### Description

It won't be loaded again from the API in this case

#### Signature

- It is a **public** method.
- It accepts the following parameter(s):
    - `$dataTable`
- _Returns:_ $dataTable DataTable
    - `void`

<a name="render" id="render"></a>
### `render()`

Requests all needed data and renders the view.

#### Signature

- It is a **public** method.
- _Returns:_ The result of rendering.
    - `string`

<a name="isrequestingsingledatatable" id="isrequestingsingledatatable"></a>
### `isRequestingSingleDataTable()`

Determine if the view data table requests a single data table or not.

#### Signature

- It is a **public** method.
- It returns a(n) `bool` value.

<a name="candisplayviewdatatable" id="candisplayviewdatatable"></a>
### `canDisplayViewDataTable()`

Here you can define whether your visualization can display a specific data table or not.

#### Description

For instance you may
only display your visualization in case a single data table is requested. If the method returns true, the footer
icon will be displayed.

#### Signature

- It is a **public static** method.
- It accepts the following parameter(s):
    - `$view` ([`ViewDataTable`](../../Piwik/Plugin/ViewDataTable.md))
- It returns a(n) `bool` value.

